force-app/main/default/objects/Rate_List__c/fields/Charge_Cost__c.field-meta.xml
<CustomField>
    <fullName>Charge_Cost__c</fullName>
    <formula>IF( ISPICKVAL(Type__c, &apos;lumpsum&apos;), Lumpsum_Amount__c,
IF(ISPICKVAL(Area_Type__c,&apos;Chargeable Area&apos;),Unit__r.Chargeable_Area__c * PSF_rate__c ,
IF(ISPICKVAL(Area_Type__c,&apos;Carpet Area&apos;),Unit__r.Carpet_Area__c * PSF_rate__c,
IF(ISPICKVAL(Area_Type__c,&apos;Garden Area&apos;), Unit__r.Chargeable_Garden_Area_Sq_Ft__c * PSF_rate__c,
IF(ISPICKVAL(Area_Type__c,&apos;Courtyard Area&apos;), Unit__r.Chargeable_Courtyard_Area_Sq_Ft__c * PSF_rate__c,
IF(ISPICKVAL(Area_Type__c,&apos;Terrace Area&apos;), Unit__r.Chargeable_Terrace_Area_Sq_Ft__c * PSF_rate__c,0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>