force-app/main/default/objects/Rate_List__c/fields/Lumpsum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lumpsum_Amount__c</fullName>
    <label>Lumpsum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>