force-app/main/default/objects/Rate_List__c/fields/ProjectCharges__c.field-meta.xml
<CustomField>
    <fullName>ProjectCharges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Charges</label>
    <referenceTo>ProjectCharges__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>