force-app/main/default/objects/Rate_List__c/fields/PS_Rate_List_Code__c.field-meta.xml
<CustomField>
    <fullName>PS_Rate_List_Code__c</fullName>
    <formula>Unit__r.Tower__r.Cluster__r.Name+&apos;-&apos;+ ProjectCharges__r.Name +&apos;-&apos;+ Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Rate List Code</label>
    <type>Text</type>
</CustomField>