force-app/main/default/objects/Rate_List__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>