force-app/main/default/objects/Rate_List__c/fields/Rate_List_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Rate_List_Bucket__c</fullName>
    <label>Rate List Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Value</fullName>
            </value>
            <value>
                <fullName>MSEB Charge</fullName>
            </value>
            <value>
                <fullName>Water Connection Charge</fullName>
            </value>
            <value>
                <fullName>Infrastructure Charge</fullName>
            </value>
            <value>
                <fullName>Development Charge</fullName>
            </value>
            <value>
                <fullName>MVAT</fullName>
            </value>
            <value>
                <fullName>Society Charges</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Stamp Duty and Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>