force-app/main/default/objects/Rate_List__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Rate Lists</relationshipLabel>
    <relationshipName>Rate_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>