force-app/main/default/objects/Rate_List__c/validationRules/Area_Type_Is_Mandatory_For_PSF_Rates.validationRule-meta.xml
<ValidationRule>
    <fullName>Area_Type_Is_Mandatory_For_PSF_Rates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Type__c,&apos;&apos;)),ISPICKVAL(Type__c,&apos;PSF&apos;),ISPICKVAL(Area_Type__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Area_Type__c</errorDisplayField>
    <errorMessage>Please Select Area Type</errorMessage>
</ValidationRule>